# CPU-Kernel-Baseline

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  bench_nanobot_fleet.sh  pyproject.toml  requirements.txt  sync_remote.sh
ggml/: CMakeLists.txt  README.md  llama_neon_ops.h  test_llama_ops.cpp
ncnn/: .gitignore  CMakeLists.txt  README.md  arm_neon_ops.h  kernel_mapping.json  test_ops.cpp
ncnn/.cmake-diagnose/: CMakeCache.txt
ncnn/arm-heavy-optimized/attention/: multiheadattention.h
ncnn/arm-heavy-optimized/common/: fused_activation.h
ncnn/arm-heavy-optimized/conv/: convolution_arm.cpp  convolution_arm_i8mm.cpp  convolutiondepthwise.h  deconvolutiondepthwise.h
ncnn/arm-heavy-optimized/gemm/: gemm.h  gemm_arm.cpp  gemm_arm_asimddp.cpp  gemm_arm_asimdfhm.cpp  gemm_arm_asimdhp.cpp  gemm_arm_vfpv4.cpp  innerproduct_arm.cpp  innerproduct_arm_asimdfhm.cpp  innerproduct_arm_asimdhp.cpp
ncnn/arm-heavy-optimized/norm/: batchnorm_arm.cpp  batchnorm_arm_asimdhp.cpp  groupnorm.h  groupnorm_arm.cpp  groupnorm_arm_asimdhp.cpp  instancenorm_arm.cpp  layernorm.h  layernorm_arm.cpp  layernorm_arm_asimdhp.cpp  lrn.h  lrn_arm.cpp  rmsnorm_arm.cpp  rmsnorm_arm_asimdhp.cpp
ncnn/arm-heavy-optimized/quant/: dequantize_arm.cpp  dequantize_arm_asimdhp.cpp  requantize.h  requantize_arm.cpp
ncnn/arm-heavy-optimized/recurrent/: lstm.h  lstm_arm_asimddp.cpp  rnn.h
ncnn/arm-heavy-optimized/reduction/: pooling.h  pooling_arm.cpp  pooling_arm_asimdhp.cpp  softmax_arm.cpp
ncnn/arm-heavy-optimized/tensor/: absval.h  bias.h  binaryop_arm_asimdhp.cpp  cast_arm.cpp  cast_arm_bf16.cpp  clip.h  clip_arm.cpp  crop.h  crop_arm.cpp  dropout.h  eltwise.h  eltwise_arm.cpp  eltwise_arm_asimdhp.cpp  flatten.h  flatten_arm.cpp  gelu_arm.cpp  hardsigmoid_arm.cpp  hardswish_arm.cpp  hardswish_arm_asimdhp.cpp  interp_arm.cpp  mish.h  mish_arm.cpp  packing_arm.cpp  padding_arm.cpp  prelu_arm.cpp  relu.h  relu_arm.cpp  relu_arm_asimdhp.cpp  selu.h  shufflechannel.h  sigmoid.h  sigmoid_arm.cpp  slice.h  swish_arm.cpp  tanh_arm.cpp  unaryop_arm.cpp  unaryop_arm_asimdhp.cpp
ncnn/arm-heavy-optimized/tests/: CMakeLists.txt  create_layer_cpu_arm.cpp  ncnn_framework_stub.cpp  ncnn_helpers.h  test_attention.cpp  test_conv.cpp  test_gemm.cpp  test_norm.cpp  test_quant.cpp  test_recurrent.cpp  test_reduction.cpp  test_tensor.cpp  test_utils.h
ncnn/c-partially-optimized/activation/: celu.h  erf.h  power.h  shrink.h  threshold.h
ncnn/c-partially-optimized/attention/: sdpa.cpp  sdpa.h
ncnn/c-partially-optimized/conv/: convolution.cpp  convolution3d.h  convolutiondepthwise.cpp  convolutiondepthwise3d.cpp  convolutiondepthwise3d.h  deconvolution1d.cpp  deconvolution1d.h  deconvolution3d.cpp  deconvolutiondepthwise1d.cpp  deconvolutiondepthwise1d.h  deconvolutiondepthwise3d.cpp  deconvolutiondepthwise3d.h  deformableconv2d.cpp
ncnn/c-partially-optimized/gemm/: innerproduct.cpp
ncnn/c-partially-optimized/other/: inversespectrogram.h  noop.cpp  priorbox.h  proposal.h  psroipooling.h  roipooling.h  yolodetectionoutput.h
ncnn/c-partially-optimized/quant/: requantize.cpp
ncnn/c-partially-optimized/reduction/: argmax.h  cumulativesum.h  pooling1d.h  reduction.h
ncnn/c-partially-optimized/tensor/: crop.cpp  expanddims.h  flip.h  gridsample.h  permute.h  reorg.h  split.cpp  split.h  squeeze.h
ncnn/c-partially-optimized/tests/: CMakeLists.txt  ncnn_framework_stub.cpp  ncnn_helpers.h  run_tests.sh  test_activation.cpp  test_attention.cpp  test_conv.cpp  test_gemm.cpp  test_norm.cpp  test_other.cpp  test_quant.cpp  test_recurrent.cpp  test_reduction.cpp  test_tensor.cpp  test_utils.h
ncnn/framework/: ncnn_framework_stub.cpp  platform.h
ncnn/mapped/batchnorm/: batchnorm.h
ncnn/mapped/binaryop/: binaryop.h  binaryop_arm.cpp
ncnn/mapped/cast/: cast.h  cast_arm_vfpv4.cpp
ncnn/mapped/clip/: clip_arm_asimdhp.cpp
ncnn/mapped/concat/: concat.h  concat_arm.cpp
ncnn/mapped/convolution/: convolution.cpp  convolution.h  convolution_arm_asimddp.cpp  convolution_arm_asimdhp.cpp
ncnn/mapped/convolution1d/: convolution1d.cpp  convolution1d.h  convolution1d_arm.cpp  convolution1d_arm_asimdhp.cpp
ncnn/mapped/convolutiondepthwise/: convolutiondepthwise.cpp  convolutiondepthwise_arm.cpp  convolutiondepthwise_arm_asimdhp.cpp
ncnn/mapped/deconvolution/: deconvolution.cpp  deconvolution.h  deconvolution_arm.cpp  deconvolution_arm_asimdhp.cpp
ncnn/mapped/deconvolutiondepthwise/: deconvolutiondepthwise.cpp  deconvolutiondepthwise_arm.cpp  deconvolutiondepthwise_arm_asimdhp.cpp
ncnn/mapped/dequantize/: dequantize.h
ncnn/mapped/gelu/: gelu.h  gelu_arm_asimdhp.cpp
ncnn/mapped/gemm/: gemm_arm_i8mm.cpp
ncnn/mapped/gru/: gru.h  gru_arm.cpp  gru_arm_asimddp.cpp  gru_arm_asimdhp.cpp  gru_arm_vfpv4.cpp
ncnn/mapped/hardsigmoid/: hardsigmoid.h  hardsigmoid_arm_asimdhp.cpp
ncnn/mapped/hardswish/: hardswish.h
ncnn/mapped/innerproduct/: innerproduct.cpp  innerproduct.h  innerproduct_arm_vfpv4.cpp
ncnn/mapped/instancenorm/: instancenorm.h  instancenorm_arm_asimdhp.cpp
ncnn/mapped/interp/: interp.cpp  interp.h  interp_arm_asimdhp.cpp
ncnn/mapped/lstm/: lstm_arm.cpp  lstm_arm_asimdhp.cpp  lstm_arm_vfpv4.cpp
ncnn/mapped/matmul/: matmul.h  matmul_arm.cpp
ncnn/mapped/mish/: mish_arm_asimdhp.cpp
ncnn/mapped/multiheadattention/: multiheadattention_arm.cpp
ncnn/mapped/packing/: packing.h
ncnn/mapped/padding/: padding.h
ncnn/mapped/pixelshuffle/: pixelshuffle.h  pixelshuffle_arm.cpp
ncnn/mapped/pooling/: pooling.cpp
ncnn/mapped/prelu/: prelu.h  prelu_arm_asimdhp.cpp
ncnn/mapped/quantize/: quantize.h  (+2 more)
paddleLite/: CMakeLists.txt  README.md  examples.cc  paddle_lite_stub.h  test_arm_kernels_standalone.cc
sglang/: CMakeLists.txt  README.md
sglang/include/: sgl_cpu_kernels.h  sgl_vec.h
sglang/src/: sgl_activation.cpp  sgl_collective.cpp  sgl_gemm.cpp  sgl_moe.cpp  sgl_norm.cpp  sgl_rope.cpp  sgl_torch_binding.cpp
sglang/tests/: test_kernels.cpp
vllm/: CMakeLists.txt  README.md  test_vllm_arm_kernels.cpp  vllm_arm_kernels.h  vllm_stub.h
vllm/cpu/: README.md
vllm/quant_dequant/: quant.cpp
(+674 files in other folders)
